# MultimodalCCI

./: .readthedocs.yaml  LICENSE.txt  README.md  requirements.txt  setup.cfg
.ipynb_checkpoints/: README-checkpoint.md  setup-checkpoint.cfg
benchmarking/: Cellchat_R.R  benchmarking.ipynb  cellchat_CCI.R  natmi_CCI.ipynb  natmi_CCI.py  readme.md  squidpy_CCI.ipynb  squidpy_CCI.py  stlearn_CCI.py
examples/: CellPhoneDB_integration.ipynb  benchmarking.ipynb  brain_aging_example.ipynb  brain_aging_integration.ipynb  integration.ipynb  loading_CCI_results.ipynb  melanoma_example.ipynb  melanoma_integration.ipynb
examples/.ipynb_checkpoints/: benchmarking-checkpoint.ipynb  brain_aging_integration-checkpoint.ipynb  integration-checkpoint.ipynb  melanoma_integration-checkpoint.ipynb  stLearn_integration-checkpoint.ipynb
manuscript_code/: melanoma_integration.ipynb  pancreas_integration.ipynb
manuscript_code/benchmarking/: benchmarking.ipynb  squidpy_CCI.py
src/multimodal_cci/: CCIData.py  __init__.py  analysis.py  integration.py  plot_helper.py  plotting.py  scoring.py  tools.py
src/multimodal_cci.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/multimodal_cci.egg-info/.ipynb_checkpoints/: PKG-INFO-checkpoint  SOURCES-checkpoint.txt  top_level-checkpoint.txt
src/multimodal_cci/.ipynb_checkpoints/: __init__-checkpoint.py  integration-checkpoint.py  plot_helper-checkpoint.py  plotting-checkpoint.py  scoring-checkpoint.py
