[metadata]
name = multimodal_cci
version = 0.1.3
author = Genomics and Machine Learning lab
author_email = l.hockey@uq.edu.au
description = A Python package for processing multi-modal CCI data
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/BiomedicalMachineLearning/MultimodalCCI
project_urls =
    Bug Tracker = https://github.com/BiomedicalMachineLearning/MultimodalCCI/issues
    repository = https://github.com/BiomedicalMachineLearning/MultimodalCCI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    stlearn>=0.4.12
    networkx>=3.2.1

[options.packages.find]
where = src