[metadata]
name = multimodal_cci
version = 1.1.0
author = Genomics and Machine Learning lab
author_email = l.hockey@uq.edu.au
description = A Python package for processing multi-modal CCI data
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/BiomedicalMachineLearning/MultimodalCCI
project_urls =
    Bug Tracker = https://github.com/BiomedicalMachineLearning/MultimodalCCI/issues
    repository = https://github.com/BiomedicalMachineLearning/MultimodalCCI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.24.0
    pandas>=2.1.4
    networkx>=3.2.1
    matplotlib>=3.8.2
    scikit-learn>=1.3.0
    scipy>=1.9.1
    tqdm>=4.66.1
    gseapy>=1.1.1
    scanpy>=1.9.0
    seaborn>=0.11.2

[options.packages.find]
where = src